2009-11-26  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/Document.cs:
	* Mono.TextEditor/TextEditor.cs:
	* Mono.TextEditor/TextViewMargin.cs:
	* Mono.TextEditor.PopupWindow/TooltipWindow.cs:
	  LogicalToVisualLine now works when logical line is beyond
	  the last line/fixed some compiler warnings.

2009-11-25  Mike Krüger  <mkrueger@novell.com>

	* Styles/TangoLightStyle.xml:
	* Mono.TextEditor/Document.cs: Made error bubbles lighter for
	  tango colors.

2009-11-24  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/BookmarkActions.cs: Applied patch from Tyson
	  S. Maxwell <tyson.maxwell@gmail.com> fixing Bug 557637 -
	  Bookmarked line 1 is not selected when going to the next
	  bookmark.

2009-11-24  Mike Krüger  <mkrueger@novell.com>

	* Styles/OblivionStyle.xml:
	* Mono.TextEditor/Margin.cs:
	* Styles/TangoLightStyle.xml:
	* Mono.TextEditor/Document.cs:
	* Mono.TextEditor/IconMargin.cs:
	* Mono.TextEditor/TextMarker.cs:
	* Mono.TextEditor/TextEditor.cs:
	* Mono.TextEditor/GutterMargin.cs:
	* Mono.TextEditor/TextViewMargin.cs:
	* Mono.TextEditor/FoldMarkerMargin.cs:
	* Mono.TextEditor/DashedLineMargin.cs:
	* Mono.TextEditor.Highlighting/Style.cs: Worked on error
	  bubbles.

2009-11-23  Michael Hutchinson  <mhutchinson@novell.com>

	* Mono.TextEditor.Highlighting/Style.cs: Added new styles.

2009-11-20  Levi Bard  <taktaktaktaktaktaktaktaktaktak@gmail.com>

	* Mono.TextEditor.Vi/ViMode.cs: Support delete key in command
	  mode.

2009-11-19  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/FoldMarkerMargin.cs: Implemented 'Code focus
	  toggle and follow-cursor'.

2009-11-18  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am: Use system mono.cairo.

2009-11-18  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/FoldMarkerMargin.cs: Fixed a bug where the
	  fold marker margin draws out of bounds.

2009-11-13  Mike Krüger  <mkrueger@novell.com>

	* SyntaxModes/CSharpSyntaxMode.xml: Added let 'keyword'.
