@@ -1,3 +1,10 @@
+2009-12-02  Michael Hutchinson  <mhutchinson@novell.com>
+
+	* Mono.TextEditor/TextEditorOptions.cs: Only emit change
+	  events when values actually change - make change events
+	  consistent for all properties. Only emit a single change
+	  event for a CopyFrom instead of once per property.
+
 2009-11-26  Mike Krüger  <mkrueger@novell.com>
 
 	* Mono.TextEditor/Document.cs:
